# ChangeLog for www-client/midori
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-9999.ebuild:
  Removed ugly hack for -lgthread-2.0, this was fixed upstream

  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-9999.ebuild:
  Don't need eutils here

  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
  midori-9999.ebuild:
  Make midori-9999 install API docs and add USE=doc to 0.1.1

  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
  midori-9999.ebuild:
  Added desktop file for 0.1.1 and added -lgthread-2.0 hack for 9999

  08 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild:
  Append -lgthread-2.0 to fix compilation with forced --as-needed

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
  midori-9999.ebuild:
  Honor LDFLAGS and use the correct CC/AR

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
  midori-9999.ebuild:
  Moved librsvg dependency out of RDEPEND as it's only needed during
  build-time and added missing intltool dependency

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-9999.ebuild:
  Added USE=doc for user/API docs

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-0.1.1.ebuild,
  midori-9999.ebuild:
  Use SLOT dependencies for libsoup

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> midori-9999.ebuild:
  Converted myconf to use_enable and use --disable-docs instead of rm -rf

*midori-9999 (07 Dec 2008)
*midori-0.1.1 (07 Dec 2008)

  07 Dec 2008; Christoph Mende <angelos@gentoo.org> +midori-0.1.1.ebuild,
  +midori-9999.ebuild:
  Initial import
