@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST midori-0.1.1.tar.bz2 309109 RMD160 936e9f310ee1d3b9546eee8ed1806bf8d1827d53 SHA1 df1176aa584369f04e5e7e76bc4e193af0580ab0 SHA256 e0a521533e999b8541d3c8ed3cedfa6b353f66a66b2ae8c5e309485ae79bbbe7
-EBUILD midori-0.1.1.ebuild 2096 RMD160 a60b4d1a7540b3b01127d41611f9524c0d751bef SHA1 e62421f43fd64828bbbed913f120d5ffff106093 SHA256 0e38ea68dfa6b307da4d4218163cf30d54fa888a52bb1353e8a8cff1805f49b8
-EBUILD midori-9999.ebuild 1896 RMD160 9ba352adb1b9d4c5346f17bc1b17c1144881b6dc SHA1 0d04fbd006ad664fe20e280db520544dbe4b9452 SHA256 22f3f8e7ada1364f0ad0f6254d2645814cc4e43bd9d4194aab412a38df0c7a10
-MISC ChangeLog 1725 RMD160 cbb4c7cb40f513c8a0d1133f84322592306d7740 SHA1 2aa862829b8ff045404b4add1eee7fa066cf594c SHA256 dc5d8598465f710597b29b6dc92a1f04000b5502398f14460958c04e12d41818
+EBUILD midori-0.1.1.ebuild 2092 RMD160 3f491176c0a8916c6ad057d3aabd7778b48876c9 SHA1 01af9d3cada7bc8b4281b980fea5950b99e9971c SHA256 9d1eee8b239e7fee30bfb3a0226a0477f19c851cb6130144440093d2ddf2502f
+EBUILD midori-9999.ebuild 1892 RMD160 43745c1cdd0e2bf83a5ddc898ee2bc4ad193c48f SHA1 b9cc2f62c28aca9d900b9d1ae42f219b1a88cd2a SHA256 b498fd8b62b13d879d2ec2f255c712bf971f142dff38c53cd61a74a2090eec65
+MISC ChangeLog 1888 RMD160 8adfb77c43d6df64d4bdcac553a78520a868dbbd SHA1 74c2c6d666fd1b0abd95639444766a1536f8a380 SHA256 842dd52ab46db73710a4f6db15d534b1b8bfb5f62ccca60e1bafef60ee9b1365
 MISC metadata.xml 313 RMD160 4f246d861576fec820b0f47f72aaf2f65212c213 SHA1 b99c81d8904c399952cb052d3f199febdc686607 SHA256 3b38fde03519c5e4aee213c8a59510553b1cb6d9a24c69cc90ef0fb797a1012e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk9rR0ACgkQKhnDs22gwa/5YgCg3yIaJLKUWpCvRnKzNnU0OnfC
-ymEAn137KJMTfVEXrFvK3SRRGXIH731D
-=eyTk
+iEYEARECAAYFAklBVnoACgkQKhnDs22gwa+nggCgnHJaqRzI1up6+GgYdVeVPrxp
+YHUAn3fNNf9q5RLJZU4LX9nBjnY4ZzBt
+=ANZI
 -----END PGP SIGNATURE-----
